--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ws-logger",
-  "version": "1.1.0-rc.12",
+  "version": "1.1.1",
   "description": "an injectable angular service for log, with many custom mode.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -13,7 +13,7 @@
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
-    "ws-regex": "^1.0.3"
+    "ws-regex": "^1.0.4"
   },
   "devDependencies": {
     "@angular/cli": "1.2.1",
@@ -41,7 +41,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/ws-types/ws-logger"
   },
   "author": "wallace sun",
   "license": "MIT"
