--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ws-logger",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "an injectable angular service for log, with many custom mode.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -13,6 +13,7 @@
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
+    "ws-logger-generic": "^1.0.0",
     "ws-regex": "^1.0.4"
   },
   "devDependencies": {
