update for angular5

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ws-logger",
-  "version": "1.1.6",
-  "description": "an injectable angular service for log, with many custom mode.",
+  "version": "2.0.2",
+  "description": "an injectable angular service for log, with many custom mode. Now for angular 5.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "paths": {
@@ -10,33 +10,22 @@
     ]
   },
   "dependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "ws-logger-generic": "^1.0.2",
-    "ws-regex": "^1.0.4"
+    "ws-logger-generic": "^1.0.2"
   },
   "devDependencies": {
-    "@angular/cli": "1.2.1",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/language-service": "^4.0.0",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~3.0.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "@angular/cli": "^1.6.2",
+    "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/language-service": "^5.0.0",
+    "@types/node": "^6.0.60",
+    "@angular/common": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "ws-regex": "^1.0.4",
+    "codelyzer": "^4.0.2",
     "ts-loader": "^2.3.7",
     "ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
-    "typescript": "^2.4.0",
-    "webpack": "^3.6.0"
+    "tslint": "^5.3.2",
+    "typescript": "^2.5.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
